chore: add new rules for eslint and new package

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,6 +39,8 @@
     "semi": [
       "error",
       "never"
-    ]
+    ],
+    "@typescript-eslint/no-empty-function": "off",
+    "@typescript-eslint/no-non-null-assertion": "off"
   }
 }
