chore: add font and apollo and graphql packages

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,6 +41,8 @@
       "never"
     ],
     "@typescript-eslint/no-empty-function": "off",
-    "@typescript-eslint/no-non-null-assertion": "off"
+    "@typescript-eslint/no-non-null-assertion": "off",
+    "@typescript-eslint/prefer-namespace-keyword": "off",
+    "@typescript-eslint/no-namespace": "off"
   }
 }
