--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.15",
+    "@vue/apollo-option": "^4.0.0-beta.5",
     "@vueuse/core": "^10.1.2",
     "eslint": "^8.40.0",
+    "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
     "vue": "^3.2.47"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
     "@vitejs/plugin-vue": "^4.1.0",
+    "dotenv": "^16.1.4",
     "eslint-plugin-vue": "^9.13.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.2",
