--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.15",
     "@vue/apollo-option": "^4.0.0-beta.5",
     "@vueuse/core": "^10.1.2",
+    "apollo-boost": "^0.4.9",
+    "apollo-link-context": "^1.0.20",
+    "apollo-link-http": "^1.5.17",
     "eslint": "^8.40.0",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
